--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/styles-design2.css">
-    <!-- <link rel="stylesheet" href="./Styles/styles-personal.css"> -->
+    <!-- <link rel="stylesheet" href="./styles/styles-design2.css"> -->
+    <link rel="stylesheet" href="./Styles/styles-personal.css">
     <title>About MDHL</title>
 </head>
 
@@ -17,12 +17,14 @@
             <a href="./index.html" class="Nav-off">Home</a>
             <a href="#" class="Nav-on">About</a>
             <a href="./contact.html" class="Nav-off">Contact</a>
+            <a href="./game_info.html" class="Nav-off">Game Information</a>
+            <a href="./rules.html" class="Nav-off">Rules</a>
         </nav>
         <img class="Img-header" src="./design1_image1.jpg" alt="Hockey players">
         <h2>About</h2>
     </header>
     <main>
-        <img src="./Logo Mighty ducks-01.png" alt="Logo MDHL" class="Logo">
+        <img src="./Logo_Mighty_ducks-01.png" alt="Logo MDHL" class="Logo">
         <div class="Main-text">
             <h3>Mision</h3>
             <p>To support young athletes living Chicago's northside neighborhood, who have an interest in
@@ -41,6 +43,7 @@
     </main>
 
     <footer>
+        <p>© Copyright MDHL 2023</p>
     </footer>
 </body>
 
