--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/styles-design2.css">
-    <!-- <link rel="stylesheet" href="./Styles/styles-personal.css"> -->
+    <!-- <link rel="stylesheet" href="./styles/styles-design2.css"> -->
+    <link rel="stylesheet" href="./Styles/styles-personal.css">
     <title>Contact</title>
 </head>
 
@@ -17,12 +17,14 @@
             <a href="./index.html" class="Nav-off">Home</a>
             <a href="./about.html" class="Nav-off">About</a>
             <a href="#" class="Nav-on">Contact</a>
+            <a href="./game_info.html" class="Nav-off">Game Information</a>
+            <a href="./rules.html" class="Nav-off">Rules</a>
         </nav>
         <img class="Img-header" src="./design1_image1.jpg" alt="Hockey players">
         <h2>Contact</h2>
     </header>
     <main>
-        <img src="./Logo Mighty ducks-01.png" alt="Logo MDHL" class="Logo">
+        <img src="./Logo_Mighty_ducks-01.png" alt="Logo MDHL" class="Logo">
         <div class="Main-text">
             <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
             <p>We reply to your email as soon as we can.</p>
@@ -30,6 +32,7 @@
     </main>
 
     <footer>
+        <p>© Copyright MDHL 2023</p>
     </footer>
 </body>
 
