:sparkles: Feat: Add registration_form.html; show_data.html and inline maps to game_info.html

--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
             <a href="#" class="Nav-on">Contact</a>
             <a href="./game_info.html" class="Nav-off">Game Information</a>
             <a href="./rules.html" class="Nav-off">Rules</a>
+            <a href="./registration_form.html" class="Nav-off">Registration Form</a>
         </nav>
         <img class="Img-header" src="./design1_image1.jpg" alt="Hockey players">
         <h2>Contact</h2>
