--- a/rules.html
+++ b/rules.html
@@ -19,6 +19,7 @@
             <a href="./contact.html" class="Nav-off">Contact</a>
             <a href="./game_info.html" class="Nav-off">Game Information</a>
             <a href="#" class="Nav-on">Rules</a>
+            <a href="./registration_form.html" class="Nav-off">Registration Form</a>
         </nav>
         <img class="Img-header" src="./design1_image1.jpg" alt="Hockey players">
         <h2>Rules of play & policies</h2>
