--- a/game_info.html
+++ b/game_info.html
@@ -19,6 +19,7 @@
             <a href="./contact.html" class="Nav-off">Contact</a>
             <a href="#" class="Nav-on">Game Information</a>
             <a href="./rules.html" class="Nav-off">Rules</a>
+            <a href="./registration_form.html" class="Nav-off">Registration Form</a>
         </nav>
         <img class="Img-header" src="./design1_image1.jpg" alt="Hockey players">
         <h2>Fall Schedule</h2>
@@ -36,6 +37,7 @@
                         <th>Teams</th>
                         <th>Location</th>
                         <th>Times</th>
+                        <th>Map</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -44,50 +46,86 @@
                         <td>U1 and U4</td>
                         <td>AJ Katzenmaier</td>
                         <td>9:30 a.m.</td>
+                        <td><iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.657203833256!2d-87.63125808458608!3d41.90022877922037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34e07f69da7%3A0x15e198c063fc787c!2sAJ%20Katzenmaier%20Elementary!5e0!3m2!1ses!2sar!4v1677179196882!5m2!1ses!2sar"
+                                width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                     </tr>
                     <tr>
                         <td>U3 and U2</td>
                         <td>Greenbay</td>
                         <td>1:00 p.m.</td>
+                        <td><iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d760069.4317768621!2d-88.69547856661723!3d41.913902596399424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3407260c45b%3A0xb351205fae50c6f3!2sGreenbay%20Elementary!5e0!3m2!1ses!2sar!4v1677179400431!5m2!1ses!2sar"
+                                width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                     </tr>
                     <tr>
                         <td rowspan="2">9/08</td>
                         <td>U5 and U6</td>
                         <td>Howard A Yeager</td>
                         <td>9:30 a.m.</td>
+                        <td><iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6073.369811174009!2d-87.8552188628272!3d42.316155014752454!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses!2sar!4v1677179569914!5m2!1ses!2sar"
+                                width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                     </tr>
                     <tr>
                         <td>U6 and U1</td>
                         <td>Marjorie P Hart</td>
                         <td>1:00 p.m.</td>
+                        <td><iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6072.405243321674!2d-87.84719917731157!3d42.32614880253845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fecd0628e1bb5%3A0x9a4d5f9aafd42e02!2sMarjorie%20P%20Hart%20School!5e0!3m2!1ses!2sar!4v1677179715833!5m2!1ses!2sar"
+                                width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                     </tr>
                     <tr>
                         <td rowspan="2">9/15</td>
                         <td>U2 and U4</td>
-                        <td>Nort</td>
+                        <td>North</td>
                         <td>9:30 a.m.</td>
+                        <td><iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13721.912615107538!2d-87.85316668932045!3d42.36718683511817!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fed60b13aa0a7%3A0xfe6df83b0f197ed6!2sNorth%20Elementary%20School!5e0!3m2!1ses!2sar!4v1677179944732!5m2!1ses!2sar"
+                                width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                     </tr>
                     <tr>
                         <td>U3 and U5</td>
                         <td>AJ Katzenmaier</td>
                         <td>1:00 p.m.</td>
+                        <td><iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.657203833256!2d-87.63125808458608!3d41.90022877922037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34e07f69da7%3A0x15e198c063fc787c!2sAJ%20Katzenmaier%20Elementary!5e0!3m2!1ses!2sar!4v1677179196882!5m2!1ses!2sar"
+                                width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                     </tr>
                     <tr>
                         <td rowspan="2">9/22</td>
                         <td>U1 and U3</td>
                         <td>South</td>
                         <td>9:30 a.m.</td>
+                        <td><iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3881.616836372297!2d-87.85772009114409!3d42.31643030292444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac2135a21%3A0x8ce88e90b96bbec1!2sSouth%20Elementary%20School%20(K-5)!5e0!3m2!1ses!2sar!4v1677179867799!5m2!1ses!2sar"
+                                width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                     </tr>
                     <tr>
                         <td>U2 and U6</td>
                         <td>Howard A Yeager</td>
                         <td>1:00 p.m.</td>
+                        <td><iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6073.369811174009!2d-87.8552188628272!3d42.316155014752454!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses!2sar!4v1677179569914!5m2!1ses!2sar"
+                                width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                     </tr>
                     <tr>
                         <td>9/29</td>
                         <td>U4 and U5</td>
                         <td>Greenbay</td>
                         <td>9:30 a.m.</td>
+                        <td><iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d760069.4317768621!2d-88.69547856661723!3d41.913902596399424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3407260c45b%3A0xb351205fae50c6f3!2sGreenbay%20Elementary!5e0!3m2!1ses!2sar!4v1677179400431!5m2!1ses!2sar"
+                                width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe></td>
                     </tr>
                 </tbody>
             </table>
