:sparkles: Feat: Add value to input radio

--- a/registration_form.html
+++ b/registration_form.html
@@ -42,21 +42,21 @@
             <input type="date" id="birthdate" name="birthdate">
             <p>Gender:</p>
             <label for="male" class="gender"> Male</label>
-            <input type="radio" id="male" name="gender">
+            <input type="radio" id="male" value="male" name="gender">
             <label for="female" class="gender"> Female</label>
-            <input type="radio" id="female" name="gender">
+            <input type="radio" id="female" value="female" name="gender">
             <p>Grade:</p>
-            <input type="radio" id="preschool" name="grade">
+            <input type="radio" id="preschool" value="preschool" name="grade">
             <label for="preschool"> Pre-School</label>
-            <input type="radio" id="first" name="grade">
+            <input type="radio" id="first" value="first"name="grade">
             <label for="first"> 1st</label>
-            <input type="radio" id="second" name="grade">
+            <input type="radio" id="second" value="second" name="grade">
             <label for="second"> 2nd</label>
-            <input type="radio" id="third" name="grade">
+            <input type="radio" id="third" value="third" name="grade">
             <label for="third"> 3rd</label>
-            <input type="radio" id="fourth" name="grade">
+            <input type="radio" id="fourth" value="fourth" name="grade">
             <label for="fourth"> 4th</label>
-            <input type="radio" id="fifth" name="grade">
+            <input type="radio" id="fifth" value="fifth" name="grade">
             <label for="fifth"> 5th</label>
 
             <p>Which elementary school do you live near?</p>
